// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAccordionItemSwitchComponentOptions should normalize complex accordion item switch component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./content-switch-video-player-accordion/content-switch-video-player-accordion.component",
      "name": "ContentSwitchVideoPlayerAccordionComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./content-switch-text-view-accordion/content-switch-text-view-accordion.component",
      "name": "ContentSwitchTextViewAccordionComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/common",
      "name": "NgSwitch",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/common",
      "name": "NgSwitchDefault",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/common",
      "name": "NgSwitchCase",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "main-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "content-switch-panel",
  "context": null,
  "controllerName": "content-switch",
  "description": null,
  "directory": "main-accordion/content-switch-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "switch",
  "modifiers": [],
  "name": "content-switch",
  "nestModule": "main-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "switch": {
    "case": [
      {
        "itemList": [
          {
            "accordion": {
              "header": null,
              "identifier": null,
              "importList": [],
              "itemList": [],
              "multiple": false,
              "name": "content-switch-video-player",
              "persistent": null,
              "propertyList": [],
              "upstream": null,
              "withPermission": false,
            },
            "accordionImportList": [
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "./content-switch-video-player-accordion/content-switch-video-player-accordion.component",
                "name": "ContentSwitchVideoPlayerAccordionComponent",
                "namedImport": null,
                "namespaceImport": null,
              },
            ],
            "description": null,
            "handlebars": [Function],
            "identifier": null,
            "ifTruthy": null,
            "importList": [],
            "kind": "nested",
            "modifiers": [],
            "name": "content-switch-video-player",
            "permission": null,
            "propertyList": [],
            "template": "nested-accordion-item.hbs",
            "title": "jest",
            "upstream": null,
          },
        ],
        "test": "video",
      },
    ],
    "defaultCase": {
      "itemList": [
        {
          "accordion": {
            "header": null,
            "identifier": null,
            "importList": [],
            "itemList": [],
            "multiple": false,
            "name": "content-switch-text-view",
            "persistent": null,
            "propertyList": [],
            "upstream": null,
            "withPermission": false,
          },
          "accordionImportList": [
            {
              "defaultImport": null,
              "isTypeOnly": false,
              "moduleSpecifier": "./content-switch-text-view-accordion/content-switch-text-view-accordion.component",
              "name": "ContentSwitchTextViewAccordionComponent",
              "namedImport": null,
              "namespaceImport": null,
            },
          ],
          "description": null,
          "handlebars": [Function],
          "identifier": null,
          "ifTruthy": null,
          "importList": [],
          "kind": "nested",
          "modifiers": [],
          "name": "content-switch-text-view",
          "permission": null,
          "propertyList": [],
          "template": "nested-accordion-item.hbs",
          "title": "jest",
          "upstream": null,
        },
      ],
    },
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "contentType",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "template": "switch-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;

exports[`NormalizeAccordionItemSwitchComponentOptions should normalize minimal accordion item switch component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/common",
      "name": "NgSwitch",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/common",
      "name": "NgSwitchDefault",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "test-as-panel",
  "context": null,
  "controllerName": "test-as",
  "description": null,
  "directory": "parent-accordion/test-as-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "switch",
  "modifiers": [],
  "name": "test-as",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "switch": {
    "case": [],
    "defaultCase": {
      "itemList": [],
    },
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "type",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "template": "switch-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;
